--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
     git config --global user.name 'hasnat-shohag'
     git config --global user.email 'hasnat.ru.ice19@gmail.com'
     git add .
-
-
-
+    git commit -m 'project init'
+    git branch --all
+    git push -u origin master
+    git push -f origin master
     
+    git checkout gh-pages
+    git remote add origin https://github.com/hasnat-shohag/psd_to_html_with_responsive_design.git
+    git checkout gh-pages
+    git push -u origin gh-pages
+
+
+
     -->
 
 
