--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Beatles</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="icon.png">
+        <link rel="shortcut icon" href="./images/ficon.png">
     
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
@@ -32,9 +32,12 @@
         <meta name="twitter:image" content="http://">
         <meta name="twitter:card" content="summary_large_image">
         <link rel="stylesheet" href="./fonts/fontawesome/fontawesome-free-5.15.3-web/css/all.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="default.css">
         <link rel="stylesheet" href="theme.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="responsive.css">
+
 </head>
 <body>
     <!-- git commands -->
@@ -62,12 +65,12 @@
     <header id="header">
         <div class="container">
             <div class="row">
-                <div class="col-6">
-                    <p class="left_p">
+                <div class="col-6 col-xs-12">
+                    <p class="left_p ">
                         Welcome to Beatles
                     </p>
                 </div>
-                <div class="col-6 text-right">
+                <div class="col-6 text-right col-xs-12">
                     <ul class="right_links">
                         <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -85,15 +88,17 @@
                 <div class="col-6">
                     <img class="logo" src="./images/Beatles.png" alt="logo">
                 </div>
-                <div class="col-6 text-right">
-                    <ul class="nav_links">
-                        <li><a href="#">home</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">gallery</a></li>
-                        <li><a href="#">portfolio</a></li>
-                        <li><a href="#">testimonial</a></li>
-                        <li><a href="#">blog</a></li>
-                        <li><a href="#">contact</a></li>
+                <div class="col-6 text-right nav_link_body">
+                    <a id="nav_trigger" href="#"><i class="fas fa-align-right"></i></a>
+                    <ul id="nav_links" class="nav_links nav_show">
+                        <li><i class="fas fa-times nav_close" id="nav_close"></i></li>
+                        <li><a href="#header">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#team">Team</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#testimonial">Testimonial</a></li>
+                        <!-- <li><a href="#">Blog</a></li> -->
+                        <li><a href="#footer">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -103,7 +108,7 @@
         <div class="overlay">
             <div class="container">
                 <div class="row  justify-content-end">
-                    <div class="col-6">
+                    <div class="col-6 col-xs-12">
                         <div class="banner_content">
                             <h2>
                                 Hi! We Are
@@ -137,11 +142,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-5">
-                    <div class="left_img"></div>
-                    <img src="./images/about-us-left-image.png" alt="">
+                <div class="col-5 col-xs-12 col-sm-6 col-md-5">
+                    <div class="left_img">
+                        <img src="./images/about-us-left-image.png" alt="">
+                    </div>
                 </div>
-                <div class="col-7">
+                <div class="col-7 col-xs-12 col-sm-6 col-md-7">
                     <div class="right_content">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -166,7 +172,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-4  col-xs-12 col-sm-6">
                     <div class="service_body">
                         <div class="top">
                             <div class="icon">
@@ -186,7 +192,7 @@
                             </p>
                         </div>
                     </div>
-                </div><div class="col-4">
+                </div><div class="col-4  col-xs-12 col-sm-6">
                     <div class="service_body">
                         <div class="top">
                             <div class="icon">
@@ -206,7 +212,7 @@
                             </p>
                         </div>
                     </div>
-                </div><div class="col-4">
+                </div><div class="col-4 col-xs-12 col-sm-6">
                     <div class="service_body">
                         <div class="top">
                             <div class="icon">
@@ -242,7 +248,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-4 col-xs-12">
                     <div class="image_body">
                         <div class="overlay">
                             <a href="#">
@@ -260,7 +266,7 @@
                         <img src="./images/firstrow-bottom.png" alt="">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-xs-12">
                     <div class="image_body">
                         <div class="overlay">
                             <a href="#">
@@ -278,7 +284,7 @@
                         <img src="./images/secondrow-bottom.png" alt="">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-xs-12">
                     <div class="image_body">
                         <div class="overlay">
                             <a href="#">
@@ -309,7 +315,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-3">
+                <div class="col-3 col-xs-12 col-sm-6">
                     <div class="team_body">
                         <div class="top">
                             <div class="overlay">
@@ -320,7 +326,7 @@
                                     <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
                                 </ul>
                             </div>
-                            <img src="images/memberpic1.png" alt="">
+                            <img src="./images/memberpic1.png" alt="">
                         </div>
                         <div class="bottom">
                             <h4>Sajal Sarder</h4>
@@ -328,7 +334,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 col-xs-12 col-sm-6">
                     <div class="team_body">
                         <div class="top">
                             <div class="overlay">
@@ -339,7 +345,7 @@
                                     <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
                                 </ul>
                             </div>
-                            <img src="images/memberpic1.png" alt="">
+                            <img src="./images/memberpic2.png" alt="">
                         </div>
                         <div class="bottom">
                             <h4>Sajal Sarder</h4>
@@ -347,7 +353,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 col-xs-12 col-sm-6">
                     <div class="team_body">
                         <div class="top">
                             <div class="overlay">
@@ -358,7 +364,7 @@
                                     <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
                                 </ul>
                             </div>
-                            <img src="images/memberpic1.png" alt="">
+                            <img src="./images/memberpic3.png" alt="">
                         </div>
                         <div class="bottom">
                             <h4>Sajal Sarder</h4>
@@ -366,7 +372,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 col-xs-12 col-sm-6">
                     <div class="team_body">
                         <div class="top">
                             <div class="overlay">
@@ -377,7 +383,7 @@
                                     <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
                                 </ul>
                             </div>
-                            <img src="images/memberpic1.png" alt="">
+                            <img src="./images/memberpic4.png" alt="">
                         </div>
                         <div class="bottom">
                             <h4>Sajal Sarder</h4>
@@ -400,7 +406,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 col-xs-12">
                     <div class="testimonial_body">
                         <div class="top">
                             <div class="img">
@@ -427,7 +433,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-xs-12">
                     <div class="testimonial_body">
                         <div class="top">
                             <div class="img">
@@ -460,7 +466,7 @@
     <footer id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-3">
+                <div class="col-3 col-xs-12 col-sm-6 col-md-4">
                     <div class="one">
                         <div class="img">
                             <img src="./images/footerlogo.png" alt="">
@@ -473,7 +479,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 col-xs-12 col-sm-6 col-md-4">
                     <div class="two">
                         <h3>
                             Contact us
@@ -521,7 +527,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-2 col-xs-6 col-sm-6 col-md-4">
                     <div class="three">
                         <div class="top">
                             <h3>
@@ -542,18 +548,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-xs-6 col-sm-6 col-md-6">
                     <div class="four">
                         <h3>
                             Flickr Photos  
                        </h3>
                        <ul>
-                            <li><img src="/images/flikr1.png" alt=""></li>
-                            <li><img src="/images/flikr2.png" alt=""></li>
-                            <li><img src="/images/flikr3.png" alt=""></li>
-                            <li><img src="/images/flikr4.png" alt=""></li>
-                            <li><img src="/images/flikr5.png" alt=""></li>
-                            <li><img src="/images/flikr6.png" alt=""></li>
+                            <li><img src="./images/flikr1.png" alt=""></li>
+                            <li><img src="./images/flikr2.png" alt=""></li>
+                            <li><img src="./images/flikr3.png" alt=""></li>
+                            <li><img src="./images/flikr4.png" alt=""></li>
+                            <li><img src="./images/flikr5.png" alt=""></li>
+                            <li><img src="./images/flikr6.png" alt=""></li>
                        </ul>
                     </div>
                 </div>
@@ -571,5 +577,6 @@
             </div>
         </div>
     </section>
+    <script src="js/script.js"></script>
 </body>
 </html>
