--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
         </div>
     </header>
-    <nav id="nav" style="display: none;">
+    <nav id="nav">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -90,12 +90,12 @@
                 <div class="col-6 text-right">
                     <ul class="nav_links">
                         <li><a href="#">home</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">gallery</a></li>
-                        <li><a href="#">portfolio</a></li>
-                        <li><a href="#">testimonial</a></li>
-                        <li><a href="#">blog</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="#about">about</a></li>
+                        <li><a href="#service">services</a></li>
+                        <li><a href="#portfolio">portfolio</a></li>
+                        <li><a href="#testimonial">testimonial</a></li>
+                        <!-- <li><a href="#">blog</a></li> -->
+                        <li><a href="#footer">contact</a></li>
                     </ul>
                 </div>
             </div>
