--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
                 <div class="col-6">
                     <img class="logo" src="./images/Beatles.png" alt="logo">
                 </div>
-                <div class="col-6 text-right">
-                    <ul class="nav_links">
-                        <li><a href="#">home</a></li>
+                <div class="col-6 text-right nav_link_body">
+                    <a class="nav_trigger" id="nav_trigger" href="#"><i class="fas fa-align-right"></i></a>
+                    <ul id="nav_links" class="nav_links">
+                        <a class="nav_close" id="nav_close" href="#"><i class="fas fa-times"></i></a>
+                        <li><a href="#index.html">home</a></li>
                         <li><a href="#about">about</a></li>
                         <li><a href="#service">services</a></li>
                         <li><a href="#portfolio">portfolio</a></li>
@@ -574,5 +576,6 @@
             </div>
         </div>
     </section>
+    <script src="js/script.js"></script>
 </body>
 </html>
