fb title addedd

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <meta name="copyrigth" content="www.mysite.com">
         <meta name="revisit" content="5 days">
     
-        <meta property="og:title" content="html learn" />
+        <meta property="og:title" content="Psd To html with responsive design" />
         <meta property="og:site_name" content="adfas" />
         <meta property="og:description" content="" />
         <meta property="og:type" content="article" />
-        <meta property="og:url" content="http://" />
-        <meta property="og:image" content="http://" />
+        <meta property="og:url" content="https://hasnat-shohag.github.io/psd_to_html_with_responsive_design/" />
+        <meta property="og:image" content="https://drive.google.com/file/d/1DuR9vL6Ih5CIC80AglJERhPY13E9ZOQQ/view?usp=sharing" />
         <meta property="og:image:width" content="600" />
         <meta property="og:image:height" content="315" />
     
